fix delete logic problem
